--- a/OrdersService/pom.xml
+++ b/OrdersService/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dinosdevblog.udemy</groupId>
-	<artifactId>ProductsService</artifactId>
+	<groupId>com.dinosdev.udemy</groupId>
+	<artifactId>OrdersService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ProductsService</name>
-	<description>Spring boot products microservice</description>
+	<name>OrdersService</name>
+	<description>Spring boot orders microservice</description>
 	<properties>
 		<java.version>21</java.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
