--- a/GatewayServer/src/main/resources/application.properties
+++ b/GatewayServer/src/main/resources/application.properties
@@ -1,9 +1,18 @@
+# spring properties
 spring.application.name=GatewayServer
 
+# eureka properties
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka
 eureka.instance.prefer-ip-address=true
 
+# products-service
 spring.cloud.gateway.routes[0].id=products-service
 spring.cloud.gateway.routes[0].uri=lb://PRODUCTSSERVICE
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 spring.cloud.gateway.routes[0].predicates[0]=Path=/products-service/**
+
+# orders-service
+spring.cloud.gateway.routes[1].id=orders-service
+spring.cloud.gateway.routes[1].uri=lb://ORDERSSERVICE
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[1].predicates[0]=Path=/orders-service/**
